--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,18 +28,18 @@ services:
             - ./docker/postlightheadlesswpstarter.wordpress.xml:/var/www/postlightheadlesswpstarter.wordpress.xml
             - ./docker/images:/var/www/images
             - ./docker/plugins:/var/www/plugins
-    frontend:
-        command: bash -c 'yarn && yarn start'
-        container_name: frontend
-        expose:
-            - '3000'
-        image: node:17
-        ports:
-            - '3000:3000'
-        user: node
-        volumes:
-            - ./frontend:/home/node/app
-        working_dir: /home/node/app
+    # frontend-next:
+    #     command: bash -c 'yarn && yarn start'
+    #     container_name: frontend
+    #     expose:
+    #         - '3000'
+    #     image: node:17
+    #     ports:
+    #         - '3000:3000'
+    #     user: node
+    #     volumes:
+    #         - ./frontend:/home/node/app
+    #     working_dir: /home/node/app
     frontend-graphql:
         command: bash -c 'yarn && yarn start'
         container_name: frontend-graphql
