--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ WORDPRESS_TITLE=Postlight Headless WP Starter
 WORDPRESS_URL=http://localhost:8080
 MIGRATEDB_LICENSE=
 MIGRATEDB_FROM=
+VIRTUAL_HOST=example.com
+WP_VIRTUAL_HOST=admin.example.com
